CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(BIN "object_pool")

INCLUDE_DIRECTORIES(/opt/include)
INCLUDE_DIRECTORIES(../../include)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wno-unused-variable -Wno-invalid-offsetof -Wno-strict-aliasing" )
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -DNDEBUG -O3" )

#FIND_LIBRARY(GLOG "glog")
FIND_PACKAGE(Boost COMPONENTS REQUIRED system)
FIND_LIBRARY(PTHREAD "pthread")
LIST(APPEND SRC_LIST main.cc)

ADD_EXECUTABLE( ${BIN} ${SRC_LIST} )
TARGET_LINK_LIBRARIES( ${BIN} "fx" ${PTHREAD} ${Boost_LIBRARIES} )
